--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 </head>
 <body>
   
-  <h1 class="text-center p-5">FizzBuzzDOM</h1>
+  <h1 class="text-center p-5 text-white">FizzBuzzDOM</h1>
+  <div class="container">
+    <div class=" row">
+     
+    </div>
+  </div>
 
-  
   <script src="js/script.js"></script>
 </body>
 </html>
